--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "icloud-mail",
-  "version": "1.1.0",
-  "description": "An Unofficial desktop app for Icloud Mail",
+  "version": "1.2.0",
+  "description": "An Unofficial desktop app for iCloud Mail",
   "main": "main.js",
   "homepage": "https://apps.himelrana.com/icloud-mail",
   "scripts": {
@@ -58,7 +58,8 @@
   },
   "license": "ISC",
   "devDependencies": {
-    "electron": "^28.1.4"
+    "electron": "^30.0.1",
+    "electron-builder": "^24.13.3"
   },
   "dependencies": {
     "electron-context-menu": "^3.6.1"
